Fix code blocks to be legible

--- a/src/static/css/tailwind.css
+++ b/src/static/css/tailwind.css
@@ -86,5 +86,9 @@ section.single details {
 
 body :not(pre) > code[class*="language-"],
 body pre[class*="language-"] {
-  @apply bg-gray-800;
+  @apply bg-gray-50 dark:bg-gray-700 text-sm text-gray-500 dark:text-gray-400;
+}
+body :not(pre) > code:not([class*="language-"]),
+body pre:not([class*="language-"]) {
+  @apply bg-gray-50 dark:bg-gray-700 text-sm text-gray-500 dark:text-gray-400;
 }
